--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,33 @@
 <div class="container mt-4">
-<h1><%= @game.name %></h1>
-<h3><%= @game.description %></h3>
-<h4>Narrador: <%= @game.user.nick_name %></h4>
-  <hr>
+  <h1><%= @game.name %></h1>
+  <h3><%= @game.description %></h3>
+  <h4>Narrador: <%= @game.user.nick_name %></h4>
+    <hr>
+  <div class="card mt-3 mb-3">
+    <div class="card-header">
+      <% @game.players.each do |p|%>
+      <h5 class="card-title"><%= p.user.nick_name %> (<%= p.user.first_name %>)</h5>
+    <% end %>
+    </div>
+  </div>
+  <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#inviteModal">Convidar para este jogo</button>
+</div>
+
+
+<%# MODAL %>
+<div class="modal fade" id="inviteModal" tabindex="-1" aria-labelledby="inviteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="inviteModalLabel">Convide pessoas para este jogo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <%= render "players/invite_form", game: @game, player: @player %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Convidar</button>
+      </div>
+    </div>
+  </div>
 </div>
