index and nav-tab

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,9 +2,55 @@
   <h1>Profile Page</h1>
 </div>
 
-<div class="container">
-  <p><strong>Nome:</strong> <%= @user.first_name %></p>
-  <p><strong>Email:</strong> <%= @user.email %></p>
+<nav>
+  <div class="nav nav-tabs mt-5" id="nav-tab" role="tablist">
+    <button class="nav-link active" id="nav-games-tab" data-bs-toggle="tab" data-bs-target="#nav-games" type="button" role="tab" aria-controls="nav-games" aria-selected="true">Meus Jogos</button>
+    <button class="nav-link" id="nav-sheets-tab" data-bs-toggle="tab" data-bs-target="#nav-sheets" type="button" role="tab" aria-controls="nav-sheets" aria-selected="true">Minhas Fichas</button>
+    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Configurações</button>
+  </div>
+</nav>
+
+<div class="tab-content" id="nav-tabContent">
+    <%# tab de meus jogos %>
+  <div class="tab-pane fade show active" id="nav-games" role="tabpanel" aria-labelledby="nav-games-tab">
+    <div class="container m-5 ">
+      <div class="card card-bls">
+        <% @user.games.each do |g| %>
+          <div class="card card-bls mb-3">
+            <div class="card-header">
+              <h4 class="card-title"><%= g.name %></h4>
+            </div>
+            <div class="card-body">
+              <p><%= g.description %></p>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+    <%# tab de fichas %>
+  <div class="tab-pane fade show active" id="nav-games" role="tabpanel" aria-labelledby="nav-games-tab">
+  </div>
+
+    <%# tab de configs %>
+  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+    <div class="container m-5">
+      <div class="container mb-4">
+        <h2 class="card-title">Olá, <%= @user.first_name %>!</h2>
+        <br>
+        <div class="container mb-4">
+          <p class="card-text">Email atual: <%= @user.email %></p>
+          <%= link_to "Edite seu email", "#", class: "btn btn-secondary" %>
+        </div>
+        <div class="container mb-4">
+          <p>Nome completo : <%= @user.first_name %> <%= @user.last_name %></p>
+          <%= link_to "Mude seu nome", "#", class: "btn btn-secondary" %>
+        </div>
+        <p><%= link_to "Atualize sua senha", "#", class: "btn btn-secondary" %></p>
+      </div>
+    </div>
+  </div>
 </div>
 
 <%# <div class="container"> %>
