--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,6 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
           <li class="nav-item">
             <%= link_to pending_players_path, class: "nav-link"  do %>
               <% if current_user.pending? %>
@@ -27,8 +24,8 @@
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Meu Perfil", profiles_path, class: "dropdown-item" %>
-              <%= link_to "Meus Amigos", "#", class: "dropdown-item" %>
+              <%= link_to "Meu Perfil", profile_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Meus Amigos",  user_friendships_path(current_user), class: "dropdown-item" %>
               <%= link_to "Criar novo Grupo",  new_game_path, class: "dropdown-item" %>
               <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
