--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon sticky-top">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
@@ -12,6 +12,9 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
+            <%= link_to "Meus amigos", user_friendships_path(current_user), class: "nav-link" %>
+          </li>
+          <li class="nav-item active">
             <%= link_to pending_players_path, class: "nav-link"  do %>
               <% if current_user.pending? %>
                 <i class="fa-solid fa-circle-exclamation"></i>
@@ -25,7 +28,6 @@
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Meu Perfil", profile_path(current_user), class: "dropdown-item" %>
-              <%= link_to "Meus Amigos",  user_friendships_path(current_user), class: "dropdown-item" %>
               <%= link_to "Criar novo Grupo",  new_game_path, class: "dropdown-item" %>
               <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
