--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,7 +8,8 @@ $orange: #E67E22;
 $green: #1edd9d;
 $black: #0f0f0f;
 $gray: #1f1f1f;
-$light-gray: #F4F4F4;
+$light-gray: #f2e7f8;
+$white: #fff3ff;
 
 // paleta
 $dark-1: #16181F;
