--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,23 +1,25 @@
-<h1>Todos os grupos de jogos</h1>
-<hr>
+<div class="container mt-3">
+  <h1>Todos os grupos de jogos</h1>
+  <hr>
 
-<div class="container">
-  <ul class="list-group">
-    <% @games.each do |g| %>
-      <li class="list-group-items">
-        <div class="card mb-3">
-          <div class="card-header">
-            <h4><%= link_to g.name, game_path(g) %></h4>
-          </div>
-          <div class="card-body">
-            <p><%= g.description %></p>
-          </div>
-          <div class="card-footer">
-            <p>Classificação: <%= g.pg %></p>
-            <p>Narrador: <%= g.user.nick_name %></p>
+  <div class="container">
+    <div class="card-grid">
+      <% @games.each do |g| %>
+        <div class="">
+          <div class="card mb-3">
+            <div class="card-header">
+              <%= link_to g.name, game_path(g) %>
+            </div>
+            <div class="card-body">
+              <p><%= g.description %></p>
+            </div>
+            <div class="card-footer">
+              <p>Classificação: <%= g.pg %></p>
+              <p>Narrador: <%= g.user.nick_name %></p>
+            </div>
           </div>
         </div>
-      </li>
-    <% end %>
-  </ul>
+      <% end %>
+    </div>
+  </div>
 </div>
