--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -23,7 +23,7 @@
                   friendship_path(f),
                   data: {turbo_method: :delete, turbo_confirm: "Tem certeza?"},
                   class: "btn btn-warning" %>
-            <button type="button" class="btn btn-secondary" data-controller="chat" data-chat-other-value=<%=f.receiver.nick_name%> data-action="click->chat#chatBox">Conversar</button>
+            <button type="button" class="btn btn-secondary" data-controller="chat" data-chat-other-value=<%=f.receiver.nick_name%> data-action="click->chat#chatBox" data-bs-toggle="modal" data-bs-target="#chatModal">Conversar</button>
           </li>
         <% else %>
           <li class="list-group-item">
@@ -33,19 +33,11 @@
                   friendship_path(f),
                   data: {turbo_method: :delete, turbo_confirm: "Tem certeza?"},
                   class: "btn btn-warning" %>
-            <button type="button" class="btn btn-secondary" data-controller="chat" data-chat-other-value=<%=f.asker.nick_name%> data-action="click->chat#chatBox">Conversar</button>
+            <button type="button" class="btn btn-secondary" data-controller="chat" data-chat-other-value=<%=f.asker.nick_name%> data-action="click->chat#chatBox" data-bs-toggle="modal" data-bs-target="#chatModal">Conversar</button>
           </li>
         <% end %>
       <% end %>
     </ul>
-  <div class="container">
-    <h5 id="nickHeader" data-chat-target="messageBox">AQUI</h5>
-    <hr>
-    <%# Nome da pessoa %>
-    <%# content %>
-    <%# input %> <%# send %>
-  </div>
-</div>
 
 <%# MODAL ADD FRIEND %>
 <div class="modal fade" id="requestModal" tabindex="-1" aria-labelledby="requestModalLabel" aria-hidden="true">
@@ -81,4 +73,20 @@
   </div>
 </div>
 
-<%# CHAT %>
+<%# CHAT MODAL V-centered + scroll%>
+<div class="modal fade" id="chatModal" tabindex="-1" aria-labelledby="chatModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <%# nick da pessoa %>
+          <h5 id="nickHeader" data-chat-target="messageBox">AQUI</h5>
+        </div>
+        <div class="modal-body">
+          <%# content / mensagens %>
+          <%# input %> <%# send %>
+        </div>
+          <div class="modal-footer">
+          </div>
+      </div>
+  </div>
+</div>
