--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,7 +1,9 @@
-<h1>Meus amigos</h1>
-<button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#requestModal">Novo Amigo</button>
-<hr>
-
+<div class="container mt-3">
+  <h1>Meus amigos</h1>
+  <p></p>
+  <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#requestModal">Novo Amigo</button>
+  <hr>
+</div>
 <div class="container">
   <h3>Solicitações pendentes</h5>
   <% @pending.each do |pf| %>
