--- a/app/views/players/pending.html.erb
+++ b/app/views/players/pending.html.erb
@@ -1,7 +1,8 @@
-<h1>Convites Pendentes</h1>
-
-<div class="container">
-  <div class="card">
+<div class="container mt-3">
+  <h1>Convites Pendentes</h1>
+</div>
+<div class="container mt-3">
+  <div class="card" style="width: 36rem;">
     <h3>Convites para Grupos</h3>
     <div class="card-body">
       <ul class="list-group">
@@ -19,7 +20,7 @@
     </div>
   </div>
   <hr>
-  <div class="card">
+  <div class="card" style="width: 36rem;">
     <h3>Convites de Amizade</h3>
     <div class="card-body">
       <ul class="list-group">
