--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,7 +6,7 @@
   background-color: #A7B1C1;
   background-size: cover;
   background-position: center;
-  
+
   h1 {
     color: #5A5D74;
     font-weight: bold;
@@ -22,9 +22,14 @@
   }
 
   .btn {
-    padding: 15px 50px;
+    padding: 10px 30px;
     border-radius: 15px;
     background-color: #7906A5;
     text-decoration: #E9E9E9;
+  }
+
+  .btn:hover {
+    background-color: #AD0042;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
 }
