--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New GameHub</h1>
-<hr>
+<div class="container mt-3">
+  <h1>Novo Grupo</h1>
+  <hr>
+</div>
 <div class="container">
   <%= render "form", game: @game %>
 
