--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-  <h1>Profile Page</h1>
+  <h1>Página de Perfil</h1>
 </div>
 
 <nav>
@@ -30,7 +30,7 @@
   </div>
 
     <%# tab de fichas %>
-  <div class="tab-pane fade show active" id="nav-games" role="tabpanel" aria-labelledby="nav-games-tab">
+  <div class="container mt-3 tab-pane fade show active" id="nav-games" role="tabpanel" aria-labelledby="nav-games-tab">
   </div>
 
     <%# tab de configs %>
