friend chat funciona

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -22,4 +22,4 @@ $warm-high: #AD0042;
 $warm-light: #DA4167;
 $cold-dark: #280436;
 $cold-high: #7906A5;
-$cold-light: #5A5D74;
+$cold-light: #B419EF;
