--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -37,7 +37,7 @@
   <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
     <div class="container m-5">
       <div class="container mb-4">
-        <h2 class="card-title">Olá, <%= @user.first_name %>!</h2>
+        <h2 class="card-title">Olá, <%= @user.first_name %> (<%= @user.nick_name %>)!</h2>
         <br>
         <div class="container mb-4">
           <p class="card-text">Email atual: <%= @user.email %></p>
