--- a/app/views/friendships/show.html.erb
+++ b/app/views/friendships/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container chat">
-  <h1>Conversas entre <%= @friendship.receiver.nick_name %> e <%= @friendship.asker.nick_name %></h1>
+  <% other_user = current_user == @friendship.receiver ? @friendship.asker : @friendship.receiver %>
+  <h1>Sussuros para <%= other_user.nick_name %></h1>
 
   <%= turbo_stream_from "friendship_#{@friendship.id}_messages" %>
   <div id="messages" class="messages">
@@ -8,16 +9,16 @@
     <% end %>
   </div>
 
+    <%# BUG: mensagem enviada e recebida bugam no display - Ambas aparecem no mesmo lugar %>
   <%= simple_form_for [@friendship, @friendship_message],
     html: {class: "d-flex",
            data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }} do |f|
   %>
-    <% other_user = current_user == @friendship.receiver ? @friendship.asker : @friendship.receiver %>
     <%= f.input :content,
       label: false,
-      placeholder: "Message #{other_user.nick_name}",
+      placeholder: "Converse com #{other_user.nick_name}",
       wrapper_html: {class: "flex-grow-1"}
     %>
-    <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+    <%= f.submit "Enviar", class: "btn btn-primary mb-3" %>
   <% end %>
 </div>
