--- a/app/views/friendships/show.html.erb
+++ b/app/views/friendships/show.html.erb
@@ -19,6 +19,6 @@
       placeholder: "Converse com #{other_user.nick_name}",
       wrapper_html: {class: "flex-grow-1"}
     %>
-    <%= f.submit "Enviar", class: "btn btn-primary mb-3" %>
+    <%= f.submit "Enviar", class: "btn btn-flat mb-3" %>
   <% end %>
 </div>
