--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,6 @@
 .card-header{
   a {
     text-decoration: none;
-    color: $cold-high;
     font-size: 20px;
     font-weight: bold;
   }
@@ -11,4 +10,12 @@
   display: grid;
   grid-template-columns: repeat(2, 2fr);
   gap: 40px;
+}
+
+h5 {
+  color: $cold-high;
+}
+
+i {
+  color: $red;
 }
