--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-image: url('images/homeimg.jpg');
   background-color: #A7B1C1;
   background-size: cover;
   background-position: center;
