--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -13,9 +13,9 @@
             <div class="card-body">
               <p><%= g.description %></p>
             </div>
-            <div class="card-footer">
-              Classificação: <%= g.pg %>
-              Narrador: <%= g.user.nick_name %>
+            <div class="card-footer" style="font-weight: 700">
+              <span class="text-item">Classificação: <%= g.pg %></span>
+              <span class="text-item">Narrador: <%= g.user.nick_name %></span>
             </div>
           </div>
         </div>
