--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="container mt-3">
   <h1>Meus amigos</h1>
   <button type="button" class="btn-ghost" data-bs-toggle="modal" data-bs-target="#requestModal">Novo Amigo</button>
   <hr>
