--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,7 +6,7 @@
   <% if @game.user == current_user %>
     <%= link_to "Edit",
             edit_game_path(@game),
-            class: "btn btn-primary"
+            class: "btn-ghost"
           %>
   <% end %>
   <div class="card mt-3 mb-3" style="width: 50rem;">
@@ -29,9 +29,9 @@
     </div>
   </div>
   <% if current_user == @game.user %>
-    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#inviteModal">Convidar para este jogo</button>
+    <button type="button" class="btn btn-flat" data-bs-toggle="modal" data-bs-target="#inviteModal">Convidar para este jogo</button>
   <% end %>
-    <%= link_to "Voltar", games_path,  class: "btn btn-primary"  %>
+    <%= link_to "Voltar", games_path,  class: "btn-ghost"  %>
 </div>
 
 
