--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -19,11 +19,13 @@
             [Ainda não aceitou o convite]
           <% end %>
         </h5>
-        <%= link_to player_path(p),
-          data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
-          class: "bt-icon-danger",
-          alt: "Delete Button" do %>
-          <i class="fa-solid fa-trash-can"></i>
+        <% if current_user == @game.user %>
+          <%= link_to player_path(p),
+            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
+            class: "bt-icon-danger",
+            alt: "Delete Button" do %>
+            <i class="fa-solid fa-trash-can"></i>
+          <% end %>
         <% end %>
     <% end %>
     </div>
