--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,7 @@
 
     <div class="form-inputs">
       <%= f.input :nick_name %>
+      <%= f.input :age %>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
