--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -41,13 +41,12 @@
         <br>
         <div class="container mb-4">
           <p class="card-text">Email atual: <%= @user.email %></p>
-          <%= link_to "Edite seu email", "#", class: "btn-ghost" %>
         </div>
         <div class="container mb-4">
           <p>Nome completo : <%= @user.first_name %> <%= @user.last_name %></p>
-          <%= link_to "Mude seu nome", "#", class: "btn-ghost" %>
+          <%= link_to "Edite seus dados", edit_profile_path, class: "btn-ghost" %>
+          <%= link_to "Atualize sua senha", edit_user_password_path, class: "btn-ghost" %>
         </div>
-        <p><%= link_to "Atualize sua senha", "#", class: "btn-ghost" %></p>
       </div>
     </div>
   </div>
