--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -8,9 +8,9 @@
     <%= @game.description %>
     <p></p>
     <%= f.label :new_description %>
-    <%= f.text_field :description %>
+    <%= f.input :description %>
     <div class="container mt-3">
-      <%= f.submit %>
+      <%= f.button :submit, class: "btn btn-ghost" %>
     </div>
   <% end %>
 </div>
