--- a/app/views/assistants/index.html.erb
+++ b/app/views/assistants/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container chatbot">
   <h1>O Mago da 4ª Parade lhe aguarda</h1>
-  <div id="questions">
+  <div id="assistants">
     <%= render @assistants %>
   </div>
 
