--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -10,6 +10,7 @@
             class: "btn-ghost"
           %>
   <% end %>
+  <%= link_to "Assistente", assistants_path, class: "btn-index" %>
   <div class="card mt-3 mb-3" style="width: 50rem;">
     <div class="card-header">
       <div class="container mt-3">
@@ -20,7 +21,7 @@
             [Ainda não aceitou o convite]
           <% end %>
           <% if p.user == p.game.user %>
-            {GM}
+            <i class="fa-brands fa-web-awesome"></i>
           <% end %>
         </h5>
         <% if current_user == @game.user %>
