--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -60,5 +60,6 @@
 
 
 <div class="container">
-    <%= link_to "Voltar", root_path, class: "btn btn-flat" %>
+    <%= link_to "Voltar", :back, class: "btn btn-flat" %>
 </div>
+ 
